[gd_scene load_steps=4 format=3 uid="uid://f7g8h9i0j1k2l"]

[ext_resource type="Script" path="res://scripts/pet/pet_walking_character.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bctyj12vq6xdj" path="res://assets/sprites/Walking-Dragon.png" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[node name="PetWalkingCharacter" type="CharacterBody2D"]
position = Vector2(500, 490)
input_pickable = false
script = ExtResource("1")

[node name="DragonVisual" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="WalkingSprite" type="Sprite2D" parent="DragonVisual"]
texture = ExtResource("2")
hframes = 6
vframes = 6
frame = 0
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ClickArea" type="Area2D" parent="."]
input_pickable = true
monitorable = true
monitoring = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_1")

[node name="ClickButton" type="Button" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
flat = true
mouse_filter = 0

[node name="MoodIndicator" type="Node2D" parent="."]
position = Vector2(0, -50)

[node name="HappyIcon" type="Label" parent="MoodIndicator"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 20
text = "‚ô•"
horizontal_alignment = 1

[node name="HungryIcon" type="Label" parent="MoodIndicator"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 20
text = "üçñ"
horizontal_alignment = 1

[node name="TiredIcon" type="Label" parent="MoodIndicator"]
visible = false
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 20
text = "üí§"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_mouse_exited"]
